@@ -232,8 +232,9 @@ set_system_penalty (Prob *ps, SCM header)
     }
 }
 
-void
-Paper_book::add_score_title (SCM header)
+
+SCM
+Paper_book::get_score_title (SCM header)
 {
   Stencil title = score_title (header);
   if (title.is_empty ())
@@ -247,30 +248,20 @@ Paper_book::add_score_title (SCM header)
       SCM props = paper_->lookup_variable (ly_symbol2scm ("score-title-properties"));
       Prob *ps = make_paper_system (props);
       paper_system_set_stencil (ps, title);
-      
-      systems_ = scm_cons (ps->self_scm (), systems_);
-      ps->unprotect ();
       set_system_penalty (ps, header);
+
+      return ps->self_scm();
     }
+
+  return SCM_BOOL_F;
 }
 
-#if  0
 SCM
-Paper_book::system_specs ()
+Paper_book::get_system_specs ()
 {
+  SCM system_specs = SCM_EOL;
   
-}
-#endif
-
-SCM
-Paper_book::systems ()
-{
-  if (systems_ != SCM_BOOL_F)
-    return systems_;
-
-  systems_ = SCM_EOL;
   Stencil title = book_title ();
-
   if (!title.is_empty ())
     {
       SCM props = paper_->lookup_variable (ly_symbol2scm ("book-title-properties"));
@@ -278,7 +269,7 @@ Paper_book::systems ()
       paper_system_set_stencil (ps, title);
       set_system_penalty (ps, header_);
 
-      systems_ = scm_cons (ps->self_scm (), systems_);
+      system_specs = scm_cons (ps->self_scm (), system_specs);
       ps->unprotect ();
     }
 
@@ -299,13 +290,15 @@ Paper_book::systems ()
 	{
 	  if (Paper_score *pscore = dynamic_cast<Paper_score *> (mop))
 	    {
-	      add_score_title (header);
+	      SCM title = get_score_title (header);
+	      if (unsmob_prob (title))
+		{
+		  system_specs = scm_cons (title, system_specs);
+		  unsmob_prob (title)->unprotect ();
+		}
 
 	      header = SCM_EOL;
-
-	      SCM system_list = scm_vector_to_list (pscore->get_paper_systems ());
-	      system_list = scm_reverse (system_list);
-	      systems_ = scm_append (scm_list_2 (system_list, systems_));
+	      system_specs = scm_cons (pscore->self_scm (), system_specs);
 	    }
 	  else
 	    {
@@ -313,19 +306,6 @@ Paper_book::systems ()
 		Ignore MIDI
 	      */
 	    }
-	}
-      else if (scm_is_vector (scm_car (s)))
-	{
-	  programming_error ("Vector case?");
-	  /*
-	    UGH. code dup.
-	  */
-	  add_score_title (header);
-	  header = SCM_EOL;
-
-	  SCM system_list = scm_vector_to_list (scm_car (s));
-	  system_list = scm_reverse (system_list);
-	  systems_ = scm_append (scm_list_2 (system_list, systems_));
 	}
       else if (Text_interface::is_markup (scm_car (s)))
 	{
@@ -337,7 +317,7 @@ Paper_book::systems ()
 	  Prob *ps = make_paper_system (SCM_EOL);
 	  paper_system_set_stencil (ps, *unsmob_stencil (t));
 	  ps->set_property ("is-title", SCM_BOOL_T); 
-	  systems_ = scm_cons (ps->self_scm (), systems_);
+	  system_specs = scm_cons (ps->self_scm (), system_specs);
 	  ps->unprotect ();
 	  
 	  // FIXME: figure out penalty.
@@ -347,6 +327,32 @@ Paper_book::systems ()
 	assert (0);
     }
 
+  system_specs = scm_reverse_x (system_specs, SCM_EOL);
+  return system_specs;
+}
+
+SCM
+Paper_book::systems ()
+{
+  if (systems_ != SCM_BOOL_F)
+    return systems_;
+
+  systems_ = SCM_EOL;
+  SCM specs = get_system_specs ();
+  for (SCM s = specs; scm_is_pair (s); s = scm_cdr (s))
+    {
+      if (Paper_score *pscore = dynamic_cast<Paper_score*> (unsmob_music_output (scm_car (s))))
+	{
+	  SCM system_list = scm_vector_to_list (pscore->get_paper_systems ());
+	  system_list = scm_reverse (system_list);
+	  systems_ = scm_append (scm_list_2 (system_list, systems_));
+	}
+      else
+	{
+	  systems_ = scm_cons (scm_car (s), systems_);
+	}
+    }
+  
   systems_ = scm_reverse (systems_);
 
   int i = 0;
