@@ -1,5 +1,8 @@
 2006-02-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/paper-book.cc (get_system_specs): separate generation of
+	titles and systems.
+
 	* flower/include/std-vector.hh: don't include config.hh
 
 2006-02-15  Jan Nieuwenhuizen  <janneke@gnu.org>
